2001-09-22  Mikael Djurfeldt  <mdj@linnaeus>

	* srfi-19.scm (priv:split-real): Inserted missing call to
	inexact->exact.

2001-09-21  Rob Browning  <rlb@defaultvalue.org>

	* srfi-14.h (SCM_CHARSET_GET): need 1L, not just 1 in "<<".

	* srfi-14.c (SCM_CHARSET_SET): need 1L, not just 1 in "<<".
	(scm_char_set_hash): val needs to be long, not just unsigned.
	(scm_char_set): need 1L, not just 1 in "<<".
	(scm_list_to_char_set): need 1L, not just 1 in "<<".
	(scm_list_to_char_set_x): need 1L, not just 1 in "<<".
	(scm_list_to_char_set_x): FUNC_NAME was wrong - added a _x.
	(scm_string_to_char_set): string length var needed to be
	scm_sizet, not int.
	(scm_string_to_char_set): need 1L, not just 1 in "<<".
	(scm_string_to_char_set_x): string length var needed to be
	scm_sizet, not int.
	(scm_string_to_char_set_x): need 1L, not just 1 in "<<".
	(scm_char_set_filter): need 1L, not just 1 in "<<".
	(scm_char_set_filter_x): need 1L, not just 1 in "<<".
	(scm_ucs_range_to_char_set): need 1L, not just 1 in "<<".
	(scm_ucs_range_to_char_set_x): need 1L, not just 1 in "<<".
	(scm_char_set_adjoin): need 1L, not just 1 in "<<".
	(scm_char_set_delete): need 1L, not just 1 in "<<".
	(scm_char_set_adjoin_x): need 1L, not just 1 in "<<".
	(scm_char_set_delete_x): need 1L, not just 1 in "<<".

2001-08-25  Thien-Thi Nguyen  <ttn@revel.glug.org>

	* srfi-19.scm (add-duration): Fix bug: Call `add-duration!' w/
	two args.  Thanks to Alex Shinn.

2001-08-24  Thien-Thi Nguyen  <ttn@revel.glug.org>

	* srfi-13.h (scm_string_map, scm_string_map_x,
	scm_string_for_each): Reverse order of first two args.
	(scm_string_for_each_index): New proc.

	* srfi-13.c (scm_string_for_each): Reverse order of first 2 args.
	(scm_string_for_each_index): New func.

	* srfi-13.scm (string-for-each-index): New exported proc.

	Thanks to Alex Shinn.

2001-08-23  Thien-Thi Nguyen  <ttn@revel.glug.org>

	* srfi-13.c (string-map): Swapped order of string and proc args to